--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,8 @@ board = megaatmega2560
 framework = arduino
 lib_deps =
   ${common.lib_deps_builtin}
+targets = upload
+monitor_speed = 115200
 
 ; used predominantly for testing main arduino variant
 [env:etheruno]
@@ -32,3 +34,5 @@ board = ethernet
 framework = arduino
 lib_deps =
   ${common.lib_deps_builtin}
+targets = upload, monitor
+monitor_speed = 115200
