--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ board = megaatmega2560
 framework = arduino
 lib_deps =
   ${common.lib_deps_builtin}
-; targets = upload
+targets = upload, monitor
 monitor_speed = 115200
 
 ; used predominantly for testing main arduino variant
