add post build script for automation

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,9 @@
 env_default = ethermega
 
 [common]
-build_flags = -D VERSION=0.0.1
+build_flags =
+  -D VERSION=0.0.1
+  -D RELEASE_DIR="bin"
 lib_deps_builtin =
   SPI
   Ethernet
@@ -22,10 +24,14 @@ lib_deps_builtin =
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+build_flags =
+  ${common.build_flags}
+  -D RELEASE_NAME="tracked_motion_controller"
 lib_deps =
   ${common.lib_deps_builtin}
 targets = upload, monitor
 monitor_speed = 115200
+extra_scripts = post:firmware2release.py
 
 ; used predominantly for testing main arduino variant
 [env:etheruno]
