test OPC server

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,10 @@ build_flags =
 lib_deps_builtin =
   SPI
   Ethernet
+lib_deps =
+  Modbus
+  ModbusIP
+  OPC
 
 ; expected controller board ethernet on board mega 2560
 [env:ethermega]
@@ -29,6 +33,7 @@ build_flags =
   -D RELEASE_NAME="tracked_motion_controller"
 lib_deps =
   ${common.lib_deps_builtin}
+  ${common.lib_deps}
 targets = upload, monitor
 monitor_speed = 115200
 extra_scripts = post:firmware2release.py
