rewrite of motor hal, motion controller and interface controller

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,10 +19,6 @@ lib_deps_builtin =
   SPI
   Ethernet
 lib_deps =
-  Modbus
-  ModbusIP
-  OPC
-  aREST
 
 ; expected controller board ethernet on board mega 2560
 [env:ethermega]
@@ -35,7 +31,7 @@ build_flags =
 lib_deps =
   ${common.lib_deps_builtin}
   ${common.lib_deps}
-targets = upload, monitor
+; targets = upload, monitor
 monitor_speed = 115200
 extra_scripts = post:firmware2release.py
 
@@ -46,5 +42,16 @@ board = ethernet
 framework = arduino
 lib_deps =
   ${common.lib_deps_builtin}
-targets = upload, monitor
+; targets = upload, monitor
 monitor_speed = 115200
+
+; olimex stme407
+[env:olimex_e407]
+platform = ststm32
+framework = arduino
+board = olimex_e407
+; upload_protocol = blackmagic
+upload_protocol = dfu
+build_flags =
+  ${common.build_flags}
+  -D RELEASE_NAME="tmc_e407"
