test flashing board stm32 e407

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,43 +15,50 @@ env_default = ethermega
 build_flags =
   -D VERSION=0.0.1
   -D RELEASE_DIR="bin"
-lib_deps_builtin =
+lib_deps_builtin_avr =
   SPI
   Ethernet
-lib_deps =
+lib_deps_avr =
+lib_deps_builtin_stm32 =
+lib_deps_stm32 =
+  STM32Ethernet
 
 ; expected controller board ethernet on board mega 2560
 [env:ethermega]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-build_flags =
-  ${common.build_flags}
-  -D RELEASE_NAME="tracked_motion_controller"
-lib_deps =
-  ${common.lib_deps_builtin}
-  ${common.lib_deps}
 ; targets = upload, monitor
 monitor_speed = 115200
 extra_scripts = post:firmware2release.py
-
-; used predominantly for testing main arduino variant
-[env:etheruno]
-platform = atmelavr
-board = ethernet
-framework = arduino
 lib_deps =
-  ${common.lib_deps_builtin}
-; targets = upload, monitor
-monitor_speed = 115200
+  ${common.lib_deps_builtin_avr}
+  ${common.lib_deps_avr}
+build_flags =
+  ${common.build_flags}
+  -D RELEASE_NAME="tracked_motion_controller"
 
 ; olimex stme407
 [env:olimex_e407]
 platform = ststm32
 framework = arduino
 board = olimex_e407
-; upload_protocol = blackmagic
 upload_protocol = dfu
+monitor_speed = 115200
+extra_scripts = post:firmware2release.py
+lib_deps =
+  ${common.lib_deps_builtin_stm32}
+  ${common.lib_deps}
 build_flags =
   ${common.build_flags}
   -D RELEASE_NAME="tmc_e407"
+  -D BAUD_RATE=115200
+  -D HSE_VALUE=12000000
+  -D ENABLE_HWSERIAL3 ; Serial on BOOT header
+  -D ENABLE_HWSERIAL6 ; Serial on UEXT connector
+  -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC ; Serial USB (USB CDC)
+  -D USBCON
+  -D USB_VID=0x0483
+  -D USB_MANUFACTURER="OLIMEX"
+  -D USB_PRODUCT="\"STM32_E-407_board\""
+  -D HAL_PCD_MODULE_ENABLED
