rearranging to help support two different chips

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ env_default = ethermega
 
 [common]
 build_flags =
-  -D VERSION=0.0.1
+  -D VERSION="\"0.0.1"\"
   -D RELEASE_DIR="bin"
 lib_deps_builtin_avr =
   SPI
@@ -36,7 +36,7 @@ lib_deps =
   ${common.lib_deps_avr}
 build_flags =
   ${common.build_flags}
-  -D RELEASE_NAME="tracked_motion_controller"
+  -D RELEASE_NAME="\"tmc_mega2560"\"
 
 ; olimex stme407
 [env:olimex_e407]
@@ -51,7 +51,8 @@ lib_deps =
   ${common.lib_deps}
 build_flags =
   ${common.build_flags}
-  -D RELEASE_NAME="tmc_e407"
+  -D RELEASE_NAME="\"tmc_e407"\"
+  -D TMC_E407=1
   -D BAUD_RATE=115200
   -D HSE_VALUE=12000000
   -D ENABLE_HWSERIAL3 ; Serial on BOOT header
