implement sabertooth hal

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-env_default = ethermega
+default_envs = ethermega
 
 [common]
 build_flags =
@@ -21,6 +21,7 @@ lib_deps_builtin_avr =
 lib_deps_avr =
 lib_deps_builtin_stm32 =
 lib_deps_stm32 =
+  LwIP
   STM32Ethernet
 
 ; expected controller board ethernet on board mega 2560
@@ -36,7 +37,8 @@ lib_deps =
   ${common.lib_deps_avr}
 build_flags =
   ${common.build_flags}
-  -D RELEASE_NAME="\"tmc_mega2560"\"
+  -D RELEASE_NAME="tmc_mega2560"
+  -D RELEASE_NAME_STR="\"tmc_mega2560"\"
 
 ; olimex stme407
 [env:olimex_e407]
@@ -45,18 +47,20 @@ framework = arduino
 board = olimex_e407
 upload_protocol = dfu
 monitor_speed = 115200
-extra_scripts = post:firmware2release.py
+; extra_scripts = post:firmware2release.py
 lib_deps =
   ${common.lib_deps_builtin_stm32}
-  ${common.lib_deps}
+  ${common.lib_deps_stm32}
 build_flags =
   ${common.build_flags}
-  -D RELEASE_NAME="\"tmc_e407"\"
+  -D RELEASE_NAME="tmc_e407"
+  -D RELEASE_NAME_STR="\"tmc_e407"\"
   -D TMC_E407=1
   -D BAUD_RATE=115200
   -D HSE_VALUE=12000000
   -D ENABLE_HWSERIAL3 ; Serial on BOOT header
   -D ENABLE_HWSERIAL6 ; Serial on UEXT connector
+  -D ENABLE_HWSERIAL1 ; Serial on Arduino header
   -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC ; Serial USB (USB CDC)
   -D USBCON
   -D USB_VID=0x0483
