testing firmware on stm32 e407, add udp interface

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ lib_deps_builtin_avr =
 lib_deps_avr =
 lib_deps_builtin_stm32 =
 lib_deps_stm32 =
-  LwIP
+  STM32duino LwIP
   STM32Ethernet
 
 ; expected controller board ethernet on board mega 2560
