add loop rate compile option

--- a/platformio.ini
+++ b/platformio.ini
@@ -67,3 +67,5 @@ build_flags =
   -D USB_MANUFACTURER="OLIMEX"
   -D USB_PRODUCT="\"STM32_E-407_board\""
   -D HAL_PCD_MODULE_ENABLED
+  -D TMC_LOOP_HZ=10 ; control loop rate frequency
+  -D TMC_DEBUG_LOGGING=1 ; turn on debug messages
