add console setup

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,11 +18,13 @@ build_flags =
 lib_deps_builtin_avr =
   SPI
   Ethernet
+  SimpleSerialShell
 lib_deps_avr =
 lib_deps_builtin_stm32 =
 lib_deps_stm32 =
   STM32duino LwIP
   STM32Ethernet
+  SimpleSerialShell
 
 ; expected controller board ethernet on board mega 2560
 [env:ethermega]
@@ -39,6 +41,9 @@ build_flags =
   ${common.build_flags}
   -D RELEASE_NAME="tmc_mega2560"
   -D RELEASE_NAME_STR="\"tmc_mega2560"\"
+  -D TMC_LOOP_HZ=10 ; control loop rate frequency
+  -D TMC_DEBUG_LOGGING=1 ; turn on debug messages
+  -D TMC_USE_CONSOLE=0 ; use an interactive console
 
 ; olimex stme407
 [env:olimex_e407]
@@ -69,3 +74,4 @@ build_flags =
   -D HAL_PCD_MODULE_ENABLED
   -D TMC_LOOP_HZ=10 ; control loop rate frequency
   -D TMC_DEBUG_LOGGING=1 ; turn on debug messages
+  -D TMC_USE_CONSOLE=1 ; use an interactive console
