still testing on hw

--- a/platformio.ini
+++ b/platformio.ini
@@ -66,6 +66,8 @@ build_flags =
   -D ENABLE_HWSERIAL3 ; Serial on BOOT header
   -D ENABLE_HWSERIAL6 ; Serial on UEXT connector
   -D ENABLE_HWSERIAL1 ; Serial on Arduino header
+  -D PIN_SERIAL1_RX=PB7
+  -D PIN_SERIAL1_TX=PB6
   -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC ; Serial USB (USB CDC)
   -D USBCON
   -D USB_VID=0x0483
