add battery reading, test comms interface with motor feedback

--- a/platformio.ini
+++ b/platformio.ini
@@ -77,3 +77,4 @@ build_flags =
   -D TMC_LOOP_HZ=20 ; control loop rate frequency
   -D TMC_DEBUG_LOGGING=1 ; turn on debug messages
   -D TMC_USE_CONSOLE=1 ; use an interactive console
+  ; -D TMC_CHANNEL_LOGGING=1
