add estop and battery to packet protocol, start implementing crc

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,12 +19,14 @@ lib_deps_builtin_avr =
   SPI
   Ethernet
   SimpleSerialShell
+  robtillaart/CRC
 lib_deps_avr =
 lib_deps_builtin_stm32 =
 lib_deps_stm32 =
   STM32duino LwIP
   STM32Ethernet
   SimpleSerialShell
+  robtillaart/CRC
 
 ; expected controller board ethernet on board mega 2560
 [env:ethermega]
